# pi4_av_linux

./: .gitignore  .gitmodules  CHANGELOG.md  LINUX.md  Makefile  PI4_FEATURE_CHECKLIST.md  README.md  SW_ARCH.md  TODO.md  make_userguide.md
.github/workflows/: ci.yml
board/raspberrypi/: busybox-no-init.fragment
br2_external/: Config.in  external.desc  external.mk
cloud/: README.md
cloud/command_api/: Dockerfile  main.py  requirements.txt
cloud/dashboards/: alerts.yaml  historical_trends_dashboard.json  live_telemetry_dashboard.json
cloud/deploy/: acl  docker-compose.yml  mosquitto.conf  retention_policy.md
cloud/ingestion/: main.py  requirements.txt
cloud/tests/: test_command_api.py
configs/: pi4_64_defconfig
contracts/: topic_catalog.yaml
contracts/schemas/: cmd_fault_inject_v1.json  cmd_mode_v1.json  cmd_replay_v1.json  cmd_reset_v1.json  common_defs.json  event_v1.json  health_v1.json  perception_objects_v1.json  perception_summary_v1.json  vehicle_state_v1.json
docs/architecture/: dynamic_software_architecture_v1.md  functional_system_architecture_v1.md  project_architecture_v1.md  static_software_architecture_v1.md
docs/comparison/: README.md  buildroot_foundation_vs_av_package_integration.md  (+3 more)
pc/: README.md  requirements.txt
pc/cpp/: CMakeLists.txt
pc/cpp/src/: perception_node.cpp  zenoh_adapter.cpp  zenoh_adapter.hpp
pi4/: README.md  requirements.txt
pi4/cpp/: CMakeLists.txt
pi4/cpp/src/: control_sim_node.cpp  zenoh_adapter.cpp  zenoh_adapter.hpp
pi4/src/: sim.py  (+6 more)
scripts/: quality_gates.yaml  run_e2e_smoke.sh  schema_lint.py
(+55 files in other folders)
